# AnalyzeApp

./: .gitignore  README.md  pyproject.toml
analyze_app/: __init__.py  cli.py
analyze_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
analyze_app/application/orchestrators/: analysis_job_orchestrator.py
analyze_app/application/use_cases/: build_project_map.py  build_project_overview.py  commit_and_push.py  detect_ai_authorship.py  get_commit_report.py  get_working_tree_report.py  import_repository.py  list_commits.py
analyze_app/domain/: entities.py
analyze_app/infrastructure/ai/: base.py  factory.py  llama_cpp_backend.py  ollama_backend.py  ollama_cache.py  project_overview_backend.py  prompts.py
analyze_app/infrastructure/analysis/: custom_rule_runner.py  duplication_runner.py  file_selection.py  mypy_runner.py  pytest_runner.py  python_environment.py  radon_runner.py  ruff_runner.py  ruff_settings.py  vulture_runner.py
analyze_app/infrastructure/git/: backend.py
analyze_app/infrastructure/jobs/: queue.py
analyze_app/infrastructure/storage/: database_store.py  sqlite_store.py
analyze_app/presentation/: __init__.py
analyze_app/presentation/qt_shell/: __init__.py  app_menu.py  (+13 more)
analyze_app/shared/: config.py  process.py
docs/: architecture_v2_ru.md  example.py  ui_spec_v1_ru.md
tests/: test_ai_authorship_calibration.py  test_ai_authorship_segmentation.py  test_analysis_runners.py  test_database_store.py  test_diff_summary_prompt.py  test_project_map_builder.py  test_quality_thresholds.py  test_readme_finder.py
(+14 files in other folders)
