[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyze-app"
version = "0.1.0"
description = "AnalyzeApp MVP tooling"
requires-python = ">=3.10"
dependencies = [
  "ollama>=0.4.0",
  "PySide6>=6.7.0",
  "markdown>=3.6",
]

[project.scripts]
analyze-app = "analyze_app.cli:main"
